--- a/templates/index.html
+++ b/templates/index.html
@@ -97,11 +97,16 @@
            I love programming and development. After learning my first programming language i was eager to know about other languages.
                 Software engineering is a field that solves complex problem using programming. Programming can improve life of people by making new software using programming.
             </p>
+
+            <p>
+                Currently I am doing my graduation and learning development and programming. Creating something beautiful from scratch and sharing it with the world is a wonderful experience. I love to work with team while we are solving problems sometimes we stuck with something. Then  discussing
+                that problem with your friends and teammates teach us many new things along the way.<br><br>
+            </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
 <!--                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19 september 2000</span></li>-->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>rahulsaraf.herokuapp.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91-7891143588</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Jhunjhunu, Rajasthan</span></li>
                 </ul>
@@ -115,10 +120,6 @@
                 </ul>
               </div>
             </div>
-            <p>
-                <br>Currently I am doing my graduation and learning development and programming. Creating something beautiful from scratch and sharing it with the world is a wonderful experience. I love to work with team while we are solving problems sometimes we stuck with something. Then  discussing
-                that problem with your friends and teammates teach us many new things along the way.
-            </p>
           </div>
         </div>
 
@@ -294,31 +295,31 @@
               <p>Cleared my intermediate form Gudha Gorji, Rajasthan. Scored 10 CGPA in in secondary.</p>
             </div>
           </div>
-          <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
-            </div>
-          </div>
+<!--          <div class="col-lg-6">-->
+<!--            <h3 class="resume-title">Professional Experience</h3>-->
+<!--            <div class="resume-item">-->
+<!--              <h4>Senior graphic design specialist</h4>-->
+<!--              <h5>2019 - Present</h5>-->
+<!--              <p><em>Experion, New York, NY </em></p>-->
+<!--              <ul>-->
+<!--                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>-->
+<!--                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>-->
+<!--                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>-->
+<!--                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>-->
+<!--              </ul>-->
+<!--            </div>-->
+<!--            <div class="resume-item">-->
+<!--              <h4>Graphic design specialist</h4>-->
+<!--              <h5>2017 - 2018</h5>-->
+<!--              <p><em>Stepping Stone Advertising, New York, NY</em></p>-->
+<!--              <ul>-->
+<!--                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>-->
+<!--                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>-->
+<!--                <li>Recommended and consulted with clients on the most appropriate graphic design</li>-->
+<!--                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>-->
+<!--              </ul>-->
+<!--            </div>-->
+<!--          </div>-->
         </div>
 
       </div>
@@ -675,57 +676,74 @@
 
         <div class="row mt-1">
 
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <div class="info">
-              <div class="address">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>Jhunjhunu, India, RJ 333022</p>
-              </div>
 
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>rahulsaraf1578@gmail.com</p>
-              </div>
+<!--              <div class="email">-->
+<!--                <i class="bi bi-envelope-fill"></i>-->
+<!--                <h4>Email:</h4>-->
+<!--                <p>rahulsaraf1578@gmail.com</p>-->
+<!--              </div>-->
 
-              <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+91-7891143588</p>
-              </div>
+<!--              <div class="phone">-->
+<!--                <i class="bi bi-phone"></i>-->
+<!--                <h4>Call:</h4>-->
+<!--                <p>+91-7891143588</p>-->
+<!--              </div>-->
 
             </div>
 
           </div>
 
-          <div class="col-lg-8 mt-5 mt-lg-0">
+          <div class="col-lg-4 mt-5 mt-lg-0">
+            <div class="info">
 
-            <form action=" " method="post" role="form" class="php-email-form1">
-              {% csrf_token %}
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-<!--                <div class="loading">Loading</div>-->
-<!--                <div class="error-message"></div>-->
 
+              <div class="email">
+                <i class="bi bi-envelope-fill"></i>
+                <h4>Email:</h4>
+                <p>rahulsaraf1578@gmail.com</p>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
 
+            <div class="email">
+                <i class="bi bi-linkedin"></i>
+                <h4>Linkedin:</h4>
+                <p>https://www.linkedin.com/in/rahul-saraf-1b27741b2/</p>
+              </div>
+
+              <div class="phone">
+                <i class="bi bi-phone-fill"></i>
+                <h4>Call:</h4>
+                <p>+91-7891143588</p>
+              </div>
+
+            </div>
           </div>
+
+<!--            <form action=" " method="post" role="form" class="php-email-form1">-->
+<!--              {% csrf_token %}-->
+<!--              <div class="row">-->
+<!--                <div class="col-md-6 form-group">-->
+<!--                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>-->
+<!--                </div>-->
+<!--                <div class="col-md-6 form-group mt-3 mt-md-0">-->
+<!--                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>-->
+<!--                </div>-->
+<!--              </div>-->
+<!--              <div class="form-group mt-3">-->
+<!--                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>-->
+<!--              </div>-->
+<!--              <div class="form-group mt-3">-->
+<!--                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>-->
+<!--              </div>-->
+<!--              <div class="my-3">-->
+<!--&lt;!&ndash;                <div class="loading">Loading</div>&ndash;&gt;-->
+<!--&lt;!&ndash;                <div class="error-message"></div>&ndash;&gt;-->
+<!--              </div>-->
+<!--              <div class="text-center"><button type="submit">Send Message</button></div>-->
+<!--            </form>-->
+
+<!--          </div>-->
 
         </div>
 
@@ -767,7 +785,7 @@
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href = "static/#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href = "#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src= "static/assets/vendor/aos/aos.js"></script>
