working on final version

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,11 +64,11 @@
       <h1>Rahul Saraf</h1>
       <p>I'm <span class="typed" data-typed-items="Developer, Freelancer, Student"></span></p>
       <div class="social-links">
-        <a href = "https://twitter.com/login" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href = "https://www.facebook.com/?stype=lo&jlou=Afdb9Y8Xm-dXpVSkGzdqI8mrb-aN7xAZk2O_m_WZDHER326UPWMUIgA4QX8PSu3R0nOQOoOD0o0jFUzxOVy9nmf_xotNk9JeeHJvxZBobMnnHQ&smuh=59889&lh=Ac9_vuslDWWhyFqaSZY" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+<!--        <a href = "https://twitter.com/login" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>-->
+<!--        <a href = "https://www.facebook.com/?stype=lo&jlou=Afdb9Y8Xm-dXpVSkGzdqI8mrb-aN7xAZk2O_m_WZDHER326UPWMUIgA4QX8PSu3R0nOQOoOD0o0jFUzxOVy9nmf_xotNk9JeeHJvxZBobMnnHQ&smuh=59889&lh=Ac9_vuslDWWhyFqaSZY" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>-->
         <a href = "https://www.instagram.com/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
         <a href = "https://github.com/"  target="_blank" class="google-plus"><i class="bx bxl-github"></i></a>
-        <a href = "https://www.linkedin.com/feed/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href = "https://www.linkedin.com/in/rahul-saraf-1b27741b2/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -765,11 +765,11 @@
       <h3>Rahul Saraf</h3>
       <p>Web developer and and programmer</p>
       <div class="social-links">
-        <a href ="https://twitter.com/login" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href = "https://www.facebook.com/?stype=lo&jlou=Afdb9Y8Xm-dXpVSkGzdqI8mrb-aN7xAZk2O_m_WZDHER326UPWMUIgA4QX8PSu3R0nOQOoOD0o0jFUzxOVy9nmf_xotNk9JeeHJvxZBobMnnHQ&smuh=59889&lh=Ac9_vuslDWWhyFqaSZY" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+<!--        <a href ="https://twitter.com/login" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>-->
+<!--        <a href = "https://www.facebook.com/?stype=lo&jlou=Afdb9Y8Xm-dXpVSkGzdqI8mrb-aN7xAZk2O_m_WZDHER326UPWMUIgA4QX8PSu3R0nOQOoOD0o0jFUzxOVy9nmf_xotNk9JeeHJvxZBobMnnHQ&smuh=59889&lh=Ac9_vuslDWWhyFqaSZY" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>-->
         <a href = "https://www.instagram.com/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href = "https://github.com/"  target="_blank" class="google-plus"><i class="bx bxl-github"></i></a>
-        <a href = "https://www.linkedin.com/feed/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href = "https://www.linkedin.com/in/rahul-saraf-1b27741b2/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
