--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MyResume</title>
+  <title>Rahul Saraf</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href = "static/assets/img/favicon.png" rel="icon">
+  <link href = "static/assets/img/Personal Website.png" rel="icon">
   <link href = "static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
