--- a/templates/index.html
+++ b/templates/index.html
@@ -94,13 +94,11 @@
 <!--              &amp;-->
             <h3>  Web Developer.</h3>
             <p class="font-italic">
-           I love programming and development. After learning my first programming language i was eager to know about other languages.
-                Software engineering is a field that solves complex problem using programming. Programming can improve life of people by making new software using programming.
+           I love programming and development. After learning my first programming language I was eager to know about other languages. Software engineering is a field that solves the complex problem using programming. Programming can improve the lives of people by making new software using programming.
             </p>
 
             <p>
-                Currently I am doing my graduation and learning development and programming. Creating something beautiful from scratch and sharing it with the world is a wonderful experience. I love to work with team while we are solving problems sometimes we stuck with something. Then  discussing
-                that problem with your friends and teammates teach us many new things along the way.<br><br>
+                Currently, I am doing my graduation and learning development and programming. Creating something beautiful from scratch and sharing it with the world is a wonderful experience. I love to work with a team while we are solving problems sometimes we are stuck with something. Then discussing that problem with your friends and teammates teach us many new things along the way.<br><br>
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -208,9 +206,9 @@
               </div>
             </div>
               <div class="progress">
-              <span class="skill">Python <i class="val">90%</i></span>
+              <span class="skill">Git and Github <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -218,10 +216,10 @@
 
           <div class="col-lg-6">
 
-            <div class="progress">
-              <span class="skill">Git and Github <i class="val">80%</i></span>
+              <div class="progress">
+              <span class="skill">Python <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
             <div class="progress">
@@ -264,12 +262,12 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Rahul Saraf</h4>
-              <p><em>Innovative and deadline-driven Web Developer.</em></p>
+              <p><em>Highly self-motivated and eager to contribute to team success through hard work, attention to detail, and excellent organizational skills. Looking for a career that will demand the best of my professional ability in terms of technical and analytical skills which will help me in enhancing my current skills and knowledge. </em></p>
               <ul>
-                <li>Jaipur, Rajasthan</li>
+                <li>Jhunjhunu, Rajasthan</li>
                 <li>+91-7891143588</li>
                 <li>rahulsaraf1578@gmail.com</li>
               </ul>
@@ -280,7 +278,7 @@
               <h4>Computer science</h4>
               <h5>2019 - Present</h5>
               <p><em>BML Munjal University, National Highway, Gurugram, Haryana 122413</em></p>
-              <p>Currently pursuing my B.Tech. in 4th semester. My current CGPA  is 8.0. </p>
+              <p>Currently pursuing my B.Tech. in 4th semester my current CGPA  is 8.0. </p>
             </div>
             <div class="resume-item">
               <h4>Intermediate</h4>
